--- a/games/templates/game_type.html
+++ b/games/templates/game_type.html
@@ -3,7 +3,6 @@
 
 <!--
 <img src="{% static "games/images/darts.png" %}" alt="My image"/>
-https://html5up.net/phantom
 -->
 <!DOCTYPE HTML>
 
@@ -51,78 +50,9 @@ https://html5up.net/phantom
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>This is Djarts, a dart scoring system, optimized for stat collection.</h1>
-								<p>Select your choice from the options below:</p>
-							</header>
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="{% static "games/images/pic01.jpg" %}" alt="" />
-									</span>
-									<a href="/new_game">
-										<h2>New Game</h2>
-										<div class="content">
-											<p>Start a new game</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="{% static "games/images/pic02.jpg" %}" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Running Games</h2>
-										<div class="content">
-											<p>Return to a running game</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="{% static "games/images/pic03.jpg" %}" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Leaderboard</h2>
-										<div class="content">
-											<p>View leaderboard.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="{% static "games/images/pic04.jpg" %}" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Players</h2>
-										<div class="content">
-											<p>View players.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="{% static "games/images/pic05.jpg" %}" alt="" />
-									</span>
-									<a href="/rules">
-										<h2>Rules</h2>
-										<div class="content">
-											<p>Read game rules.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="{% static "games/images/pic06.jpg" %}" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Legends</h2>
-										<div class="content">
-											<p>View the Hall of Legends.</p>
-										</div>
-									</a>
-								</article>
-							</section>
+							<h1>{{game_type.name}}</h1>
+							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<p>{{game_type.rules|safe}}</p>
 						</div>
 					</div>
 
