--- a/games/templates/rules.html
+++ b/games/templates/rules.html
@@ -3,7 +3,6 @@
 
 <!--
 <img src="{% static "games/images/darts.png" %}" alt="My image"/>
-https://html5up.net/phantom
 -->
 <!DOCTYPE HTML>
 
@@ -52,76 +51,26 @@ https://html5up.net/phantom
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is Djarts, a dart scoring system, optimized for stat collection.</h1>
-								<p>Select your choice from the options below:</p>
+								<h1>Rules</p>
 							</header>
 							<section class="tiles">
-								<article class="style1">
+
+							{% for game_type in game_types %}
+
+								<article class="{% cycle 'style1' 'style2' 'style3' 'style4' 'style5' 'style6' %}">
 									<span class="image">
-										<img src="{% static "games/images/pic01.jpg" %}" alt="" />
+										<img src="/static/games/images/{% cycle 'pic01' 'pic02' 'pic03' 'pic04' 'pic05' 'pic06' %}.jpg" alt="" />
 									</span>
-									<a href="/new_game">
-										<h2>New Game</h2>
+									<a href="/game_type/{{game_type.id}}">
+										<h2>{{game_type.name}}</h2>
 										<div class="content">
-											<p>Start a new game</p>
+											<p>{{game_type.description}}</p>
 										</div>
 									</a>
 								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="{% static "games/images/pic02.jpg" %}" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Running Games</h2>
-										<div class="content">
-											<p>Return to a running game</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="{% static "games/images/pic03.jpg" %}" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Leaderboard</h2>
-										<div class="content">
-											<p>View leaderboard.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="{% static "games/images/pic04.jpg" %}" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Players</h2>
-										<div class="content">
-											<p>View players.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="{% static "games/images/pic05.jpg" %}" alt="" />
-									</span>
-									<a href="/rules">
-										<h2>Rules</h2>
-										<div class="content">
-											<p>Read game rules.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="{% static "games/images/pic06.jpg" %}" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Legends</h2>
-										<div class="content">
-											<p>View the Hall of Legends.</p>
-										</div>
-									</a>
-								</article>
+
+							{% endfor %}
+
 							</section>
 						</div>
 					</div>
