--- a/games/templates/games.html
+++ b/games/templates/games.html
@@ -18,16 +18,17 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-
 				<!-- Menu -->
 					{% include "menu_partial.html" %}
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>{{game_type.name}}</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>{{game_type.rules|safe}}</p>
+							{% for game in games %}
+								<a href="/game/{{ game.id }}">{{ game.id }}</a> {{ game.game_type.name }}
+								<br><br>
+							{% endfor %}
+							
 						</div>
 					</div>
 
