--- a/games/templates/game.html
+++ b/games/templates/game.html
@@ -18,16 +18,16 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-
 				<!-- Menu -->
 					{% include "menu_partial.html" %}
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>{{game_type.name}}</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>{{game_type.rules|safe}}</p>
+							{{ game.id }} <br>
+							{{ game.game_type }} <br>
+							{{ game.location.name }} <br>
+							    {{ game.player_1 }} | {{ game.player_2 }}
 						</div>
 					</div>
 
